<resources>

    <string name="app_name">奇点</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_super_settings">设置</string>
    <string name="action_update">检测更新</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="action_login">登录</string>
    <string name="action_service_detail">服务条款</string>
    <string name="title_activity_register">注册</string>
    <string name="login_password_again">再次输入密码</string>
    <string name="register_private_name">昵称（不可用来登录）</string>
    <string name="register_birthday">生日（不可修改）</string>
    <string name="register_email">邮箱（不可修改）</string>
    <string name="register_verifycode">验证码</string>
    <string name="register_username">用户名（会自动获取）</string>
    <string name="action_register_success">注册成功</string>
    <string name="action_service_not_allowed">通知</string>
    <string name="password_reset_username">用户名</string>
    <string name="password_reset_birthday">注册时填写的生日日期</string>
    <string name="password_reset_email">注册时填写的邮箱</string>
    <string name="password_reset_verifycode">验证码</string>
    <string name="title_activity_password_reset">信息校验</string>
    <string name="title_activity_password_reset_v2">重置密码</string>
    <string name="action_application">内测申请</string>
    <string name="title_activity_act_account">密码修改</string>
    <string name="title_activity_beta_application">BETA测试申请</string>
    <string name="action_act_self">自助授权</string>
    <string name="action_beta_application">内测申请</string>
    <string name="action_update_software">软件更新</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="user_info">资料卡</string>
    <string name="info_full">此页为用户资料卡</string>
    <string name="hello">下拉可刷新</string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text">ScrollView下拉刷新完毕</string>
    <string name="user_tools">自助平台</string>
    <string name="title_activity_update_release">检测更新</string>
    <string name="status_Text">正在检测</string>
    <string name="edit_private_name">编辑昵称</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="public_sh_tools">公共查询平台</string>
    <string name="public_sh_1">上海实时公交查询平台（1）</string>
    <string name="public_sh_2">上海实时公交查询平台（2）</string>
    <string name="public_sh_3">上海实时公交查询平台（3）</string>
    <string name="public_sh_stop_nearby">附近站点</string>
    <string name="public_sh_way_finding">路线规划</string>
    <string name="public_sh_subway">上海地铁</string>
    <string name="public_sh_road">上海实时路况</string>
    <string name="public_sh_traffic_card">上海交通卡余额查询</string>
    <string name="public_sh_school">上海入学信息查询</string>
    <string name="public_sh_weather">上海天气查询</string>
    <string name="public_sh_weather_quality">上海空气质量查询</string>
    <string name="public_sh_community">上海社区事务受理</string>
    <string name="public_sh_passport_apply">上海出入境办证</string>
    <string name="public_sh_plane">上海航班查询</string>
    <string name="public_sh_restaurant">上海餐饮脸谱查询</string>
    <string name="public_sh_hospital">上海医疗保险查询</string>
    <string name="public_sh_road_water">上海道路积水查询</string>
    <string name="public_flight">飞常准航班动态查询</string>
    <string name="flight_live">航班跟踪</string>
    <string name="tencent_map">腾讯地图</string>
    <string name="title_activity_beta_helper">beta申请帮助</string>
    <string name="music_list">专辑详情</string>
    <string name="typhoon_map">实时台风路径</string>
    <drawable name="white">#ffffff</drawable>
</resources>
